// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCardImage customize 1`] = `
<div>
  <div
    class="card-img-bottom bazinga"
  />
</div>
`;

exports[`loads and displays CCardImage component 1`] = `
<div>
  <img
    class="card-img"
  />
</div>
`;
